Fix: Refresh schedule summary overlaps title

--- a/client/app/components/queries/ScheduleDialog.css
+++ b/client/app/components/queries/ScheduleDialog.css
@@ -11,3 +11,11 @@
   padding-right: 5px;
   float: left;
 }
+
+.schedule-phrase {
+  display: inline-block;
+}
+
+a.schedule-phrase {
+  cursor: pointer;
+}
